--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "flutter_app_1",
-    "short_name": "flutter_app_1",
+    "name": "hajir_f",
+    "short_name": "hajir_f",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
